Feature: Generate typescript SDK  (#13)
