# src/controllers/commits/commits.controller.ts
@@ -1,5 +1,5 @@
 import { Controller, Get, NotFoundException, Param } from "@nestjs/common";
-import { ApiNotFoundResponse, ApiOkResponse } from "@nestjs/swagger";
+import { ApiNotFoundResponse, ApiOkResponse, ApiOperation } from "@nestjs/swagger";
 
 import { ApiHasPassThruAuth, Auth, RepoAuth } from "../../core";
 import { GitCommit } from "../../dtos";
@@ -13,6 +13,7 @@ export class CommitsController {
   @ApiHasPassThruAuth()
   @ApiOkResponse({ type: GitCommit, isArray: true })
   @ApiNotFoundResponse({})
+  @ApiOperation({ title: "Get a commit", operationId: "commits_get" })
   public async get(@Param("remote") remote: string, @Param("commitSha") commitSha: string, @Auth() auth: RepoAuth) {
     const commit = await this.commitService.get(remote, commitSha, { auth });
 
